--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Personal GraphQL Editor - Quickly build your GraphQL schema directly from your browser!"
+      content="Quickly build your GraphQL schema for FaunaDB, directly from your browser!"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
